# webdav-server-for-filehold

./: CONTRIBUTING.md  IIS.md  README.md  SECURITY.md  agents.md  pyproject.toml
.github/prompts/: refactor-code.prompt.md
.github/workflows/: create-release.yaml  test-push.yml
src/webdav_for_filehold/: auth.py  category_service.py  document_data_service.py  document_service.py  drawer_service.py  folder_service.py  main.py  provider.py  upload_stream.py  utils.py  virtual_file.py  virtual_folder.py
src/webdav_server_for_filehold/: __init__.py  auth.py  cabinet_service.py  client_factory.py  columns_with_values.py  download_stream.py  field_definition.py  folder_service.py  library_object_service.py  main.py  virtual_file.py  virtual_folder.py
tests/e2e/: test_main.py
tests/unit/: test_auth.py  test_creation.py  test_default_schema.py  test_document_move.py  test_document_update.py  test_download_stream.py  test_duplicate_logic.py  test_folder_service.py  test_library_object_service.py  test_models.py  test_move_operations.py  test_rename.py  test_replace_logic.py  test_update_document.py  test_update_operations.py  test_upload_stream.py  test_utils.py
