[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webdav-server-for-filehold"
version = "1.0.0"
description = "WebDAV server for FileHold (Community Tool)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Daniel Klecha", email = "daniel.klecha@gmail.com" },
]
maintainers = [
  { name = "Daniel Klecha", email = "daniel.klecha@gmail.com" },
]
keywords = ["webdav", "filehold", "adapter", "filesystem"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
urls = { Repository = "https://github.com/danielklecha/webdav-server-for-filehold" }
dependencies = [
    "wsgidav",
    "uvicorn",
    "zeep",
    "requests",
]

[project.scripts]
webdav-server-for-filehold = "webdav_server_for_filehold.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/webdav_server_for_filehold"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "ruff",

]
